# recipe-api

./: .gitignore  README.md
backend/: app.py  pyproject.toml
backend/src/api/: __init__.py
backend/src/api/farewell/: io.py  routes.py
backend/src/api/greet/: io.py  routes.py
backend/src/api/ingredient/: io.py  routes.py
backend/src/api/recipe/: io.py  routes.py
backend/src/database/: __init__.py  supabase_client.py
backend/src/database/tables/: __init__.py  data_types.py  ingredients_table.py  recipe_ingredients_table.py  recipe_table.py
backend/src/globals/: environment.py
backend/src/modules/: __init__.py
backend/src/modules/database/: __init__.py  data_types.py  supabase_client.py
backend/src/modules/recipe_finder/: recipe_finder.py  types.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: nav-bar.tsx
frontend/app/context/: RecipeContext.tsx
frontend/app/data/: api-client.ts  recipe-cache.ts  recipe-client.ts  recipeClient.ts  types.ts
frontend/app/find/: ingredient-pill.tsx  ingredient-search.tsx  layout.tsx  page.tsx  recipe-search.tsx
frontend/app/find/results/: page.tsx  recipe-card.tsx
frontend/app/recipe/[id]/: checklist.tsx  page.tsx
